xed serializability and some errors in the group setup protocol